--- a/SCSS/_document.scss
+++ b/SCSS/_document.scss
@@ -98,9 +98,6 @@
                 border-radius: 1rem;
             }
         // Document Scrollbar
-            &::-webkit-scrollbar-track {
-                margin-top: 3rem;
-            }
             &::-webkit-scrollbar-thumb {
                 background-color: #DDD;
                 border-radius: 3px;
